# Contractual_Obligations

./: AUTHORS  Makefile.am  Makefile.in  NEWS  README  README.md  config.h.in  configure  configure.ac
CONF/: infile  prop_NRELCORR  prop_NRQCD  prop_srcx0y0z0t0_8x4x4x4b1.900000Kud0.12500Ks0.12500c1.000000id1.1n1  regress.sh
docs/: BARYONS.tex  Corr.tex  Doxyfile  Doxyfile.prov  GEOM.tex  IO.tex  MEAS.tex  Makefile  TESTS.tex  TETRA.tex  UTILS.tex  VPF.tex  WME.tex  bibliography.bib  intro.tex  macros.sty
extractors/: Makefile  Makefile.am  Makefile.in  PropOps.c  baryonfile.c  cavg.c  mesonfile.c  momavg.c  pent_avg.c  reader.c  reader.h  tet_avg.c  vpffile.c
m4/: dummy
src/: Makefile.am  Makefile.in  corr.c
src/BARYONS/: bar_contractions.c  bar_ops.c  bar_ops_SSE.c  bar_projections.c  baryons.c  baryons2.c  baryons3.c  baryons_uds.c  baryons_uud.c  baryons_uuu.c  tetraquark.c  wrap_baryons.c
src/DIQUARKS/: diquark.c  diquark_contraction.c  diquark_degen.c  wrap_diquarks.c
src/DISPREL/: dispersions.c  wrap_disprel.c
src/FIELD/: plaqs_links.c  polyakov.c
src/GEOM/: gammas.c  geometry.c  plan_ffts.c
src/HEADERS/: AVX512_OPS.h  AVX_OPS.h  CERN.h  Doxy_mainpage.h  HAL_rhorho.h  HAL_su2.h  HIREP.h  Ospinor.h  PImunu_projections.h  SSE2_OPS.h  Scidac.h  WME.h  WardIdentity.h  bar_contractions.h  bar_ops.h  bar_ops_SSE.h  bar_projections.h  baryons.h  baryons2.h  baryons3.h  baryons_uds.h  baryons_uud.h  baryons_uuu.h  basis_conversions.h  brutal_mesons.h  chklat_stuff.h  cl_diagonal.h  cl_offdiagonal.h  clover.h  common.h  conserved_local.h  contract_O1O1.h  contract_O1O2.h  contract_O1O3.h  contract_O2O1.h  contract_O2O2.h  contract_O2O3.h  contract_O3O1.h  contract_O3O2.h  contract_O3O3.h  (+90 more)
src/IO/: CERN.c  HIREP.c  Scidac.c  XML_info.c  chklat_stuff.c  correlators.c  cut_output.c  input_VPF.c  input_WME.c  input_baryons.c  input_disprel.c  input_general.c  input_mesons.c  input_pentas.c  input_reader.c  input_tetras.c  io.c  read_config.c  read_headers.c  read_propheader.c  readers.c
src/LINALG/: Ospinor.c  bar_contractions.c  bar_ops.c  bar_ops_SSE.c  bar_projections.c  contractions.c  contractions_SSE.c  halfspinor_ops.c  halfspinor_ops_SSE.c  matrix_ops.c  matrix_ops_SSE.c  mmul.c  mmul_SSE.c  spinmatrix_ops.c  spinmatrix_ops_SSE.c  spinor_ops.c  spinor_ops_SSE.c
src/MEAS/: PImunu_projections.c  WardIdentity.c  brutal_mesons.c  conserved_local.c  correlators.c  currents.c  local_local.c  mesons.c  mesons_offdiag.c  momspace_PImunu.c  plaqs_links.c  tmoments_PImunu.c  wall_mesons.c  wrap_VPF.c  wrap_mesons.c
src/NRQCD/: clover.c  derivs.c  evolve.c  grad.c  grad_2.c  grad_4.c  halfspinor_ops.c  nrqcd.c  sources.c  spin_dependent.c  spin_independent.c
src/PENTA/: contract_O1O1.c  contract_O1O2.c  contract_O1O3.c  contract_O2O1.c  contract_O2O2.c  contract_O2O3.c  contract_O3O1.c  contract_O3O2.c  contract_O3O3.c  penta_bubds.c  penta_contractions.c  penta_udusb.c  wrap_pentas.c
src/TETRA/: HAL_rhorho.c  HAL_su2.c  dibaryon_contractions.c  rhoeta_contract.c  su2_dibaryon.c  su2_rhoeta.c  tetra_contractions.c  tetra_degen.c  tetra_udbb.c  tetra_udcb.c  tetra_usbb.c  tetra_uscb.c  tetraquark.c  wrap_tetras.c
src/UTILS/: GLU_bswap.c  GLU_timer.c  bar_contractions.c  bar_ops.c  bar_ops_SSE.c  basis_conversions.c  contractions.c  contractions_SSE.c  corr_malloc.c  corr_sort.c  crc32.c  crc32c.c  cut_routines.c  gramschmidt.c  matrix_ops.c  matrix_ops_SSE.c  par_MWC_4096.c  par_rng.c  progress_bar.c  quark_smear.c  setup.c  spinor_ops.c  spinor_ops_SSE.c
src/VPF/: PImunu_projections.c  WardIdentity.c  cl_diagonal.c  cl_offdiagonal.c  conserved_local.c  currents.c  ll_diagonal.c  ll_offdiagonal.c  local_local.c  momspace_PImunu.c  tmoments_PImunu.c  wrap_VPF.c
src/WME/: WME.c  wrap_WME.c
tests/: Makefile.am  Makefile.in  SSE_tests.c  SSE_tests.h  bar_ops_tests.c  bar_ops_tests.h  bar_projections_tests.c  bar_projections_tests.h  baryon_projections.c  baryon_projections.h  baryonfile.c  contract_tests.c  contract_tests.h  gamma_tests.c  gamma_tests.h  halfspinor_tests.c  halfspinor_tests.h  matops_tests.c  matops_tests.h  mesonfile.c  momavg.c  reader.c  reader.h  spinmatrix_tests.c  spinmatrix_tests.h  spinor_tests.c  spinor_tests.h  tetra_contractions_tests.c  tetra_contractions_tests.h  unit.c  utils_tests.c  utils_tests.h  vpffile.c
